画像を追加しました。

--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
-ああああああ
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta property='og:type' content='website'>
+  <meta property='og:title' content='トシヤのポートフォリオ'>
+  <meta property='og:url' content='URL入る'>
+  <meta property='og:description' content='トシヤのポートフォリオです。'>
+  <meta property="og:image" content="img/ogp.png">
+  <meta name="description" content="トシヤのポートフォリオです。" />
+  <title>Toshiya portfolio</title>
+  <link rel="shortcut icon" href="img/favicon2.ico" />
+  <!-- あとで修正 -->
+  <link rel="stylesheet" href="css">
+</head>
+
+<body>
+
+
+  <header id="header">
+    <h1 class="logo">
+      <span class="logo-title">Toshiya AKAGI's portfolio</span>
+      <span class="logo-desc">Web Engineer</span>
+    </h1>
+  </header>
+
+  <nav>
+    <a href="#profile">自己紹介</a>
+    <a href="#works">制作物</a>
+    <a href="#contact">お問い合わせ</a>
+  </nav>
+
+
+  <div>
+    <h2 id="profile">自己紹介</h2>
+    <h3>パーソナル情報</h3>
+    <img src="image/toshiya.png" alt="">
+    <ul>
+      <li>名前　赤木　俊也 (あかぎ　としや )</li>
+      <li>年齢　１９９１年７月１４日生まれ　２８歳</li>
+      <li>出身　埼玉県（現在は東京都在住）　</li>
+    </ul>
+    <h3>経歴</h3>
+    <ul>
+      <li>２０１０年４月　早稲田大学商学部　入学</li>
+      <li>２０１４年４月　早稲田大学商学部　卒業　</li>
+      <li>市役所に勤務</li>
+    </ul>
+    <div>
+      <h3>これまでのプログラミング学習について</h3>
+      <p>２０１９年１０月より独学でHTML、CSS、Bootstrap、Javascript、Ruby、Rails、Git、SQLなどの基礎を勉強しました。<br>12月からはプログラミングスクール「TechBoost」様にて、現役のエンジニアの方に教えて頂きながら、オリジナルアプリ「筋トレ仲間探しアプリ」を製作中です。</p>
+      <p>学習にあたり参考にしている書籍</p>
+
+      <ul>
+        <li>『イラスト図解式 この一冊で全部わかるWeb技術の基本 』</li>
+        <li>『リーダブルコードーより良いコードを書くためのシンプルで実践的なテクニック』</li>
+        <li>『プロを目指す人のためのRuby入門』</li>
+      </ul>
+      <h3>どのような業務をしたいか</h3>
+      <p>人の役に立つアプリ開発をしたいです。<br>プログラミングによって世の中の無駄を無くして、豊かな生活を送れるにしたい</p>
+      <h3>どのようなエンジニアになりたいか</h3>
+      <p>安定した公務員を退職してまで、エンジニアになりたい理由は、プログラミング技術を通じて、多くの人の役に立ちたいからです。</p>
+    </div>
+  </div>
+
+  <div>
+    <h2 id="works">制作物</h2>
+    <h3>自分自身のポートフォリオサイトです。</h3>
+    <p>html css WordPressを用いて、自身のポートフォリオサイトを作成しました。</p>
+
+    <h3>質問投稿アプリです。</h3>
+    <p>・Ruby on railsを用いて、新規質問の投稿、編集、削除及び回答の投稿、編集、削除を行える簡易アプリを作成しました。</p>
+    <p>またAWS及びHerokuを用いて、Webサービスとして公開しました。</p>
+
+    <h3>筋トレ仲間交流アプリです</h3>
+    <p>作成中です</p>
+
+    <h2 id="contact">お問い合わせ</h2>
+    <p>Twitter</p>
+    <p>DMまでご連絡をお願い致します。</p>
+  </div>
+
+  <footer>
+    <a href="#profile">自己紹介</a>
+    <a href="#works">制作物</a>
+    <a href="#contact">お問い合わせ</a>
+    <p class="copyright">
+      © 2019 Toshiya portfolio All rights reserved.</p>
+  </footer>
+</body>
+
+</html>
