--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta name="format-detection" content="email=no,telephone=no,address=no">
   <meta property='og:type' content='website'>
   <meta property='og:title' content='トシヤのポートフォリオ'>
   <meta property='og:url' content='URL入る'>
@@ -11,84 +13,135 @@
   <meta property="og:image" content="img/ogp.png">
   <meta name="description" content="トシヤのポートフォリオです。" />
   <title>Toshiya portfolio</title>
-  <link rel="shortcut icon" href="img/favicon2.ico" />
+
   <!-- あとで修正 -->
-  <link rel="stylesheet" href="css">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+
 </head>
 
-<body>
+<body class="body">
+  <div class="wrapper">
+    <header id="header">
+      <h1 class="logo">
+        <!-- <span class="logo-title">Toshiya Akagi's portfolio</span>
+    </h1> -->
+        <div class="topimage">
+          <p>Akagi Toshiya's Portfolio</p>
+        </div>
 
+    </header>
 
-  <header id="header">
-    <h1 class="logo">
-      <span class="logo-title">Toshiya AKAGI's portfolio</span>
-      <span class="logo-desc">Web Engineer</span>
-    </h1>
-  </header>
+    <nav class="navi">
+      <a href="#profile"><i class="fas fa-user"></i>  自己紹介</a>
+      <a href="#works"><i class="fas fa-laptop"></i>  制作物</a>
+      <a href="#contact"><i class="fas fa-envelope"></i>  お問い合わせ</a>
+    </nav>
 
-  <nav>
-    <a href="#profile">自己紹介</a>
-    <a href="#works">制作物</a>
-    <a href="#contact">お問い合わせ</a>
-  </nav>
-
-
-  <div>
-    <h2 id="profile">自己紹介</h2>
-    <h3>パーソナル情報</h3>
-    <img src="image/toshiya.png" alt="">
-    <ul>
-      <li>名前　赤木　俊也 (あかぎ　としや )</li>
-      <li>年齢　１９９１年７月１４日生まれ　２８歳</li>
-      <li>出身　埼玉県（現在は東京都在住）　</li>
-    </ul>
-    <h3>経歴</h3>
-    <ul>
-      <li>２０１０年４月　早稲田大学商学部　入学</li>
-      <li>２０１４年４月　早稲田大学商学部　卒業　</li>
-      <li>市役所に勤務</li>
-    </ul>
-    <div>
-      <h3>これまでのプログラミング学習について</h3>
-      <p>２０１９年１０月より独学でHTML、CSS、Bootstrap、Javascript、Ruby、Rails、Git、SQLなどの基礎を勉強しました。<br>12月からはプログラミングスクール「TechBoost」様にて、現役のエンジニアの方に教えて頂きながら、オリジナルアプリ「筋トレ仲間探しアプリ」を製作中です。</p>
-      <p>学習にあたり参考にしている書籍</p>
-
-      <ul>
-        <li>『イラスト図解式 この一冊で全部わかるWeb技術の基本 』</li>
-        <li>『リーダブルコードーより良いコードを書くためのシンプルで実践的なテクニック』</li>
-        <li>『プロを目指す人のためのRuby入門』</li>
-      </ul>
-      <h3>どのような業務をしたいか</h3>
-      <p>人の役に立つアプリ開発をしたいです。<br>プログラミングによって世の中の無駄を無くして、豊かな生活を送れるにしたい</p>
-      <h3>どのようなエンジニアになりたいか</h3>
-      <p>安定した公務員を退職してまで、エンジニアになりたい理由は、プログラミング技術を通じて、多くの人の役に立ちたいからです。</p>
+    <div class="profile">
+      <h2 id="profile"><i class="fas fa-user"></i>  自己紹介</h2>
     </div>
+    <div class="content">
+
+        <div class="profile-left">
+        <div class="image">
+          <img src="image/toshiya.png" alt="">
+        </div>
+        <h3><i class="fas fa-user-circle"></i> パーソナル情報</h3>
+        <div class="text-profile">
+        <ul>
+          <li>名前　赤木　俊也  (あかぎ　としや)</li>
+          <li>年齢　１９９１年７月１４日生まれ　２８歳</li>
+          <li>出身　埼玉県（現在は東京都在住）　</li>
+        </ul>
+        </div>
+        </div>
+
+        <div class="content-text">
+        <h3 class="profile-text"><i class="fas fa-walking"></i> 経歴</h3>
+        <ul>
+          <li>２０１０年４月　早稲田大学商学部　入学</li>
+          <li>２０１４年３月　早稲田大学商学部　卒業　</li>
+          <li>２０１４年４月　埼玉県内の市役所　入庁　</li>
+          <P>現職では生活保護受給者の担当ケースワーカーとして、生活に困窮されている方の支援を行っていました。</p>
+
+        </ul>
+          <h3 class="profile-text"><i class="fas fa-keyboard"></i> これまでのプログラミング学習について</h3>
+          <p>２０１９年１０月より独学でHTML、CSS、Bootstrap、JavaScript、Ruby、Rails、Git、SQLなどの基礎を勉強しました。<br>１２月からはプログラミングスクール「TechBoost」様にて、現役のエンジニアの方に教えて頂きながら、主にRuby on Railsを用いて「写真投稿アプリ」を製作中です。</p><br>
+
+          <p>学習にあたり参考にしている書籍</p>
+
+          <ul>
+            <li>『イラスト図解式 この一冊で全部わかるWeb技術の基本 』</li>
+            <li>『リーダブルコードーより良いコードを書くためのシンプルで実践的なテクニック』</li>
+            <li>『プロを目指す人のためのRuby入門』</li>
+          </ul>
+          <!-- <h3 class="profile-text"><i class="far fa-thumbs-up"></i> どのような業務をしたいか</h3>
+          <p>フロント側、サーバー側にも興味があり、<br></p> -->
+          <h3 class="profile-text"><i class="fas fa-chart-line"></i> どのようなエンジニアになりたいか</h3>
+          <p>安定しているとされる公務員を退職してまでエンジニアになりたい理由は、プログラミング技術を通じて、より多くの人の役に立ちたいからです。そのため自身のプログラミングスキルを提供するだけではなく、自身がこれまで培ってきた調整力やコミュニケーション力を活かしてプロジェクトマネージャーやWEBデイレクターといった人を動かす側の立場に立ち、多くの人の才能、技術の可能性を引き出し、快適な社会の実現、関わる事業の成長に貢献し、新しいサービスや価値を生み出し提供出来るエンジニアになりたいと考えています。</p>
+        </div>
+        </div>
+
+
+
+    <div class="works">
+      <h2 id="works"><i class="fas fa-laptop"></i>  制作物</h2>
+      <div class="f-container">
+      <section class="card">
+        <img class="card-img" src="image/スクリーンショット 2020-01-06 0.17.29.png" alt="">
+        <div class="card-content">
+          <h1 class="card-title">ポートフォリオサイト</h1>
+          <p class="card-text">HTML、CSSを用いて、自身のポートフォリオサイトを作成しました。レスポンシブ対応しています。</p>
+        </div>
+        <div class="card-link">
+          <a href="https://syunpararel.github.io/">github</a>
+        </div>
+      </section>
+
+      <section class="card">
+        <img class="card-img" src="image/スクリーンショット 2019-12-11 12.17.43.png" alt="">
+        <div class="card-content">
+          <h1 class="card-title">質問投稿アプリ</h1>
+          <p class="card-text">Ruby on railsを用いて、新規質問の投稿、編集、削除及び回答の投稿、編集、削除を行える簡易アプリを作成しました。またAWS及びHerokuを用いて、Webサービスとして公開しました。<br></p>
+          <!-- <p>HTML/CSS/Ruby on rails/Bootstrap使用</p> -->
+        </div>
+        <div class="card-link">
+          <a href="https://github.com/syunpararel/qanda">github</a>
+        </div>
+      </section>
+
+      <!-- <section class="card">
+        <img class="card-img" src="image/スクリーンショット 2020-01-03 0.31.52.png" alt="">
+        <div class="card-content">
+          <h1 class="card-title">筋トレ仲間交流アプリ</h1>
+          <p class="card-text">Ruby on railsを用いて、新規質問の投稿、編集、削除及び回答の投稿、編集、削除を行える簡易アプリを作成しました。またAWS及びHerokuを用いて、Webサービスとして公開しました。<br></p>
+          <p>HTML/CSS/Ruby on rails/Bootstrap使用</p> -->
+        <!-- </div> -->
+        <!-- <div class="card-link">
+          <a href="https://syunpararel.github.io/">github</a>
+        </div>
+      </section> -->
+    </div>
+    </div>
+
+    <div class="contact">
+      <h2 id="contact"><i class="fas fa-envelope"></i>  お問い合わせ</h2>
+      <a href="https://twitter.com/syunparalel" class="content-twitter"><i class="fab fa-twitter"></i></a>
+      <p>TwitterのDMにてご連絡をお待ちしております。</p>
+    </div>
+
+    <footer class="footer">
+      <a href="#profile">自己紹介</a>
+      <a href="#works">制作物</a>
+      <a href="#contact">お問い合わせ</a>
+      <p class="copyright">
+      Copyright© 2019 Toshiya portfolio All rights reserved.</p>
+    </footer>
   </div>
 
-  <div>
-    <h2 id="works">制作物</h2>
-    <h3>自分自身のポートフォリオサイトです。</h3>
-    <p>html css WordPressを用いて、自身のポートフォリオサイトを作成しました。</p>
-
-    <h3>質問投稿アプリです。</h3>
-    <p>・Ruby on railsを用いて、新規質問の投稿、編集、削除及び回答の投稿、編集、削除を行える簡易アプリを作成しました。</p>
-    <p>またAWS及びHerokuを用いて、Webサービスとして公開しました。</p>
-
-    <h3>筋トレ仲間交流アプリです</h3>
-    <p>作成中です</p>
-
-    <h2 id="contact">お問い合わせ</h2>
-    <p>Twitter</p>
-    <p>DMまでご連絡をお願い致します。</p>
-  </div>
-
-  <footer>
-    <a href="#profile">自己紹介</a>
-    <a href="#works">制作物</a>
-    <a href="#contact">お問い合わせ</a>
-    <p class="copyright">
-      © 2019 Toshiya portfolio All rights reserved.</p>
-  </footer>
 </body>
 
 </html>
