githubのリンク修正

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <p class="card-text">HTML、CSSを用いて、自身のポートフォリオサイトを作成しました。レスポンシブ対応しています。</p>
         </div>
         <div class="card-link">
-          <a href="https://syunpararel.github.io/">github</a>
+          <a href="https://github.com/syunpararel/syunpararel.github.io">github</a>
         </div>
       </section>
 
